Fixed strange glitch with scrollbar on Experience page

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,6 @@ a:visited{
   text-decoration: none;
   color: rgba(230,230,230,0.8);
 }
-
 html{
   box-sizing: border-box;
   font-size: 10px;
@@ -15,11 +14,11 @@ html{
   background-color: rgba(32,32,32,0.8);
   box-shadow: inset 5px 5px 100px rgba(255,255,255,0.2),
               inset 0px 0px 100px rgba(0,0,0,0.3);
+              overflow: hidden;
 }
 body{
-  height: 100%;
+  min-height: 100%;
 }
-
 nav{
   display: inline-block;
   position: fixed;
@@ -27,7 +26,6 @@ nav{
   top: 0;
   width: 400px;
 }
-
 .portfolio{
   display: inline-block;
   margin-top: 80px;
@@ -36,8 +34,7 @@ nav{
   color: rgba(200,200,200,0.6);
   font-size: 3rem;
 }
-
-nav .active, .active:focus, a:active {
+.active, .active:focus, a:active {
   color: rgba(240,240,240,0.8);
   text-decoration: underline;
   text-decoration-color: rgba(255,255,255,1);
@@ -45,7 +42,6 @@ nav .active, .active:focus, a:active {
 nav a:hover{
   border-bottom: 1px solid rgba(255,255,255,0.2);
 }
-
 .container{
   max-width: 1050px;
   min-height: 100%;
@@ -61,7 +57,6 @@ nav > ul{
   list-style: none;
   font-size: 2rem;
 }
-
 main{
   display: grid;
   border-radius: 20px;
@@ -83,14 +78,12 @@ main > *{
   grid-column: 2/8;
   grid-row: 1/2;
   text-align: center;
-
 }
 #tExperience{
   grid-column: 1/7;
   grid-row: 1/2;
   text-align: center;
 }
-
 .inspirations{
   grid-column: 7/9;
   grid-row: 1/2;
@@ -100,7 +93,6 @@ main > *{
   font-size: 1.5rem;
   margin: 0;
 }
-
 .inspirations >ul{
   padding: 8px;
   list-style-type: none;
@@ -157,7 +149,6 @@ footer{
   section{
     grid-row: 1/3;
   }
-
   .container header nav ul li {
     text-align: center;
   }
@@ -179,7 +170,6 @@ footer{
     min-height: 480px;
   }
   .container header nav ul{
-    /* display: inline-block; */
     display: flex;
     flex: 3 100px;
     flex-wrap: wrap;
@@ -204,7 +194,6 @@ footer{
     vertical-align: center;
     grid-row: 1/3;
   }
-
   .container header nav ul li {
     text-align: center;
   }
